--- a/style.css
+++ b/style.css
@@ -4,7 +4,10 @@ body {
   background-color: #f7f7f7;
   color: #333;
 }
-
+h1 {
+  text-align: center;
+  color: #333;
+}
 .container {
   max-width: 900px;
   margin: auto;
